feat[5]: [ADD] fichier de services.ts pour nav-bar

--- a/apps/workspace-ui/src/app/components/navBar/nav-bar.component.html
+++ b/apps/workspace-ui/src/app/components/navBar/nav-bar.component.html
@@ -9,10 +9,9 @@
     </form>
   
     <div class="navbar-nav">
-      <a class="nav-item nav-link text-white" href="#">Contact</a>
+      <a class="nav-item nav-link text-white" href="#">Mon Entreprise</a>
       <a class="nav-item nav-link text-white" href="#">Se Connecter</a>
-      <a class="nav-item nav-link text-warning"  href="#">warning</a>
-      <a class="nav-item nav-link text-danger"  href="#">danger</a>
+      
       
     </div>
     
