feat[5]:[ADD] des icones bruts dans la NavBar

--- a/apps/workspace-ui/src/app/components/navBar/nav-bar.component.html
+++ b/apps/workspace-ui/src/app/components/navBar/nav-bar.component.html
@@ -9,10 +9,26 @@
     </form>
   
     <div class="navbar-nav">
-      <a class="nav-item nav-link text-white" href="#">Mon Entreprise</a>
-      <a class="nav-item nav-link text-white" href="#">Se Connecter</a>
+      <div>
+        <a class="nav-item nav-link text-white" href="#" name="entreprise">
+          <i class="fa-sharp fa-regular fa-building p-2" ></i>
+          <Label for="entreprise">Mon Entreprise</Label>
+        </a>
+      </div>
       
+      <div>
+        <a class="nav-item nav-link text-white " href="#" name="notif">
+          <i class="fa-regular fa-user p-2"></i>
+          <label for="notif">Notifications</label>
+        </a>
+      </div>
       
+      <div>
+        <a class="nav-item nav-link text-white" href="#" name="profile">
+          <i class="fa-regular fa-bell p-2"></i>
+          <label for="profile">Se Connecter</label>
+          </a>
+      </div>
     </div>
     
   </nav>
