feat[5]|chore :[UPDATE] Modif commentaires

--- a/apps/workspace-ui/src/app/components/navBar/nav-bar.component.html
+++ b/apps/workspace-ui/src/app/components/navBar/nav-bar.component.html
@@ -1,3 +1,4 @@
+<!-- Partie NavBar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-between">
     <div class="navbar-nav">
       <img src="assets/static/logo_Agamis" alt="Ici le logo d'agamis" class="nav-item nav-link text-white">
@@ -35,6 +36,7 @@
     
   </nav>
 
+  <!-- Partie Tab -->
   <div class="tabs bg-secondary">
     <button (click)="selectTab(1)" [class.active]="activeTab === 1">Sessions</button>
     <button (click)="selectTab(2)" [class.active]="activeTab === 2">Applications</button>
