--- a/apps/workspace-ui/src/app/components/navBar/nav-bar.component.html
+++ b/apps/workspace-ui/src/app/components/navBar/nav-bar.component.html
@@ -1,54 +1,49 @@
 <!-- Partie NavBar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-between">
-    <div class="navbar-nav">
-      <img src="assets/static/logo_Agamis" alt="Ici le logo d'agamis" class="nav-item nav-link text-white">
-      <h2 class="nav-item nav-link text-white">agamis</h2>
-      </div>
-  
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Rechercher" aria-label="Rechercher">
-    </form>
-  
-    <div class="navbar-nav">
-      <div>
-        <a class="nav-item nav-link text-white" href="#" name="entreprise">
-          <i class="fa-sharp fa-regular fa-building p-2" ></i>
-          <Label for="entreprise">Mon Entreprise</Label>
-        </a>
-      </div>
-      
-      <div>
-        <a class="nav-item nav-link text-white " href="#" name="notif">
-          <i class="fa-regular fa-user p-2"></i>
-          <label for="notif">Notifications</label>
-        </a>
-      </div>
-      
-      <div>
-        <a class="nav-item nav-link text-white" href="#" name="profile">
-          <i class="fa-regular fa-bell p-2"></i>
-          <label for="profile">Se Connecter</label>
-          </a>
-      </div>
-    </div>
-
-    
-    
-  </nav>
-
-  <!-- Partie Tab -->
-  <div class="tabs bg-secondary">
-    <button (click)="selectTab(1)" [class.active]="activeTab === 1">Sessions</button>
-    <button (click)="selectTab(2)" [class.active]="activeTab === 2">Applications</button>
-
-  </div>
-  
-  <div class="tab-content">
-    <div *ngIf="activeTab === 1">
-      Contenu de l'onglet 1
-    </div>
-    <div *ngIf="activeTab === 2">
-      Contenu de l'onglet 2
-    </div>
+<nav class="custom-navbar">
+  <div class="navbar-left">
+    <img src="assets/static/logo_Agamis" alt="Ici le logo d'agamis" class="navbar-logo">
+    <h2>agamis</h2>
   </div>
 
+  <form class="navbar-search">
+    <input type="search" placeholder="Rechercher">
+  </form>
+
+  <div class="navbar-right">
+    <div class="nav-item">
+      <a href="#" name="entreprise">
+        <i class="fa-sharp fa-regular fa-building"></i>
+        <label for="entreprise">Mon Entreprise</label>
+      </a>
+    </div>
+    
+    <div class="nav-item">
+      <a href="#" name="notif">
+        <i class="fa-regular fa-user"></i>
+        <label for="notif">Notifications</label>
+      </a>
+    </div>
+    
+    <div class="nav-item">
+      <a href="#" name="profile">
+        <i class="fa-regular fa-bell"></i>
+        <label for="profile">Se Connecter</label>
+      </a>
+    </div>
+  </div>
+</nav>
+
+<!-- Partie Tab
+<div class="custom-tabs">
+  <button (click)="selectTab(1)" [class.active]="activeTab === 1">Sessions</button>
+  <button (click)="selectTab(2)" [class.active]="activeTab === 2">Applications</button>
+</div>
+
+<div class="tab-content">
+  <div *ngIf="activeTab === 1">
+    Contenu de l'onglet 1
+  </div>
+  <div *ngIf="activeTab === 2">
+    Contenu de l'onglet 2
+  </div>
+</div> -->
