feat[5]: Changement de la 2ème review - boostrap +sass

--- a/apps/workspace-ui/src/app/components/navBar/nav-bar.component.html
+++ b/apps/workspace-ui/src/app/components/navBar/nav-bar.component.html
@@ -33,7 +33,7 @@
   </div>
 </nav>
 
-<!-- Partie Tab
+<!-- Partie Tab -->
 <div class="custom-tabs">
   <button (click)="selectTab(1)" [class.active]="activeTab === 1">Sessions</button>
   <button (click)="selectTab(2)" [class.active]="activeTab === 2">Applications</button>
@@ -41,9 +41,9 @@
 
 <div class="tab-content">
   <div *ngIf="activeTab === 1">
-    Contenu de l'onglet 1
+    Contenu de l'onglet Sessions
   </div>
   <div *ngIf="activeTab === 2">
-    Contenu de l'onglet 2
+    Contenu de l'onglet Applications
   </div>
-</div> -->
+</div>
