affichage side-bar principale

--- a/apps/workspace-ui/src/app/components/SideBar/side-bar.component.html
+++ b/apps/workspace-ui/src/app/components/SideBar/side-bar.component.html
@@ -1,1 +1,48 @@
-<p>side-bar works!</p>
+<section class="app">
+    <aside class="sidebar">
+        <header>
+          <img src="img/logo.png" alt="logo Agamis">
+          <h2>MENU</h2>
+        </header>
+      <nav class="sidebar-nav">
+   
+        <ul>
+          <li>
+            <a href="#"><i class=""></i> <span>Projects</span></a>
+            
+          </li>
+          <li>
+            <a href="#"><i class=""></i> <span class="">Collaborators</span></a>
+            <!-- <ul class="nav-flyout">
+              <li>
+                <a href="#"><i class="ion-ios-alarm-outline"></i>Watch</a>
+              </li>
+              <li>
+                <a href="#"><i class="ion-ios-camera-outline"></i>Creeper</a>
+              </li>
+              <li>
+                <a href="#"><i class="ion-ios-chatboxes-outline"></i>Hate</a>
+              </li>
+              <li>
+                <a href="#"><i class="ion-ios-cog-outline"></i>Grinder</a>
+              </li>
+            </ul> -->
+          </li>
+        </ul>
+      </nav>
+    </aside>
+
+    <ul class="nav-flyout">
+      <h2>PROJECTS</h2>
+      <li>
+        <p>Recent projects</p>
+      </li>
+      <li>
+      </li>
+      <li>
+      </li>
+      <li>
+      </li>
+    </ul>
+
+  </section>
