--- a/apps/workspace-ui/src/app/app.component.html
+++ b/apps/workspace-ui/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-nx-welcome></app-nx-welcome> <router-outlet></router-outlet>
+<!-- <app-nx-welcome></app-nx-welcome> <router-outlet></router-outlet> -->
+
+<app-side-bar></app-side-bar> 
