modification couleurs et dimensions, ajout de l'apparition du 2eme sidebar avec hover

--- a/apps/workspace-ui/src/app/components/SideBar/side-bar.component.html
+++ b/apps/workspace-ui/src/app/components/SideBar/side-bar.component.html
@@ -1,5 +1,5 @@
 <section class="app">
-    <aside class="sidebar">
+    <aside class="sidebar hover">
         <header>
           <img src="img/logo.png" alt="logo Agamis">
           <h2>MENU</h2>
@@ -8,11 +8,11 @@
    
         <ul>
           <li>
-            <a href="#"><i class=""></i> <span>Projects</span></a>
+            <a href="#"><i></i> <span>Projects</span></a>
             
           </li>
           <li>
-            <a href="#"><i class=""></i> <span class="">Collaborators</span></a>
+            <a href="#"><i class="hover"></i> <span class="hover">Collaborators</span></a>
             <!-- <ul class="nav-flyout">
               <li>
                 <a href="#"><i class="ion-ios-alarm-outline"></i>Watch</a>
@@ -33,7 +33,7 @@
     </aside>
 
     <ul class="nav-flyout">
-      <h2>PROJECTS</h2>
+      <h2>Projects</h2>
       <li>
         <p>Recent projects</p>
       </li>
