avancement contenu et mise en page sidebar, ajouts de logos svg

--- a/apps/workspace-ui/src/app/components/SideBar/side-bar.component.html
+++ b/apps/workspace-ui/src/app/components/SideBar/side-bar.component.html
@@ -1,48 +1,122 @@
 <section class="app">
-    <aside class="sidebar hover">
+
+    <aside class="sidebar" >
         <header>
-          <img src="img/logo.png" alt="logo Agamis">
-          <h2>MENU</h2>
+
+          <svg xmlns:xlink="http://www.w3.org/1999/xlink" fill="none" width="125.968" xmlns="http://www.w3.org/2000/svg" style="-webkit-print-color-adjust:exact" id="screenshot-07bfee25-9922-11ed-86ae-6b73ddd7d7b4" version="1.1" viewBox="4917 98 125.968 31.294" height="31.294">
+            <g id="shape-07bfee25-9922-11ed-86ae-6b73ddd7d7b4" rx="0" ry="0">
+              <g id="shape-07bfee2d-9922-11ed-86ae-6b73ddd7d7b4" style="fill:#000000" rx="0" ry="0">
+                <g id="shape-07bfee2e-9922-11ed-86ae-6b73ddd7d7b4" style="fill:#000000" rx="0" ry="0">
+                  <g id="shape-07bfee2f-9922-11ed-86ae-6b73ddd7d7b4" style="fill:#000000" rx="0" ry="0">
+                    <g id="shape-07bfee30-9922-11ed-86ae-6b73ddd7d7b4">
+                      <g class="fills" id="fills-07bfee30-9922-11ed-86ae-6b73ddd7d7b4">
+                        <path class="cls-1" rx="0" ry="0" style="fill:#f5f1e4;fill-opacity:1" d="M4931.855,129.294L4931.149,128.029C4930.948,127.672,4930.728,127.326,4930.490,126.993C4928.000,123.405,4924.038,121.116,4919.686,120.752C4919.242,120.714,4918.832,120.694,4918.427,120.694L4917.000,120.694L4917.000,106.600L4918.427,106.600C4918.834,106.600,4919.242,106.582,4919.681,106.543C4924.032,106.176,4927.995,103.890,4930.490,100.307C4930.731,99.975,4930.951,99.629,4931.149,99.270L4931.853,98.000L4944.086,105.063L4943.361,106.302C4943.152,106.655,4942.962,107.019,4942.790,107.391L4942.790,107.404C4940.929,111.354,4940.929,115.929,4942.790,119.878C4942.976,120.282,4943.164,120.643,4943.368,120.992L4944.093,122.231ZM4919.855,117.901L4919.855,117.901ZC4925.126,118.338,4929.853,121.069,4932.825,125.350L4932.868,125.411L4935.272,124.032C4931.766,118.862,4926.085,115.583,4919.855,115.135ZM4937.830,104.755C4935.104,110.376,4935.104,116.936,4937.830,122.557L4940.231,121.162C4940.218,121.135,4940.205,121.107,4940.193,121.081C4937.975,116.368,4937.975,110.910,4940.193,106.197C4940.205,106.175,4940.215,106.152,4940.224,106.131ZM4926.424,113.652C4928.914,114.572,4931.229,115.909,4933.270,117.606C4932.820,114.989,4932.820,112.315,4933.270,109.698C4931.229,111.395,4928.914,112.733,4926.424,113.652ZZM4919.855,109.393L4919.855,112.169C4926.086,111.721,4931.767,108.443,4935.272,103.272L4932.870,101.883L4932.817,101.954C4929.839,106.225,4925.115,108.949,4919.855,109.393ZZ">
+                        </path>
+                      </g>
+                    </g>
+                    <g id="shape-07bfee31-9922-11ed-86ae-6b73ddd7d7b4">
+                      <g class="fills" id="fills-07bfee31-9922-11ed-86ae-6b73ddd7d7b4">
+                        <path class="cls-1" rx="0" ry="0" style="fill:#f5f1e4;fill-opacity:1" d="M4959.077,118.303C4958.192,120.102,4956.536,120.843,4954.539,120.843C4952.284,120.843,4950.000,119.560,4950.000,116.762C4950.000,110.852,4958.849,113.508,4958.849,110.796C4958.849,109.854,4958.078,109.340,4956.964,109.340C4955.646,109.340,4954.995,110.025,4954.995,111.253L4950.425,111.253C4950.425,107.463,4953.765,106.000,4957.190,106.000C4960.587,106.000,4963.698,107.341,4963.698,110.882L4963.698,120.558L4959.077,120.558ZM4956.309,117.589C4957.791,117.589,4958.935,116.732,4958.935,115.078L4958.935,114.221C4957.307,115.078,4954.738,114.792,4954.738,116.304C4954.735,117.161,4955.452,117.589,4956.309,117.589ZZ">
+                        </path>
+                      </g>
+                    </g>
+                    <g id="shape-07bfee32-9922-11ed-86ae-6b73ddd7d7b4">
+                      <g class="fills" id="fills-07bfee32-9922-11ed-86ae-6b73ddd7d7b4">
+                        <path class="cls-1" rx="0" ry="0" style="fill:#f5f1e4;fill-opacity:1" d="M4972.852,127.966C4968.684,127.966,4965.802,125.511,4965.288,121.686L4969.883,121.686C4970.112,123.256,4971.169,124.256,4972.709,124.256C4974.566,124.256,4975.564,122.971,4975.564,120.972L4975.564,118.888C4974.552,120.130,4973.028,120.845,4971.426,120.829C4967.628,120.829,4965.000,117.918,4965.000,113.415C4965.000,108.912,4967.626,106.001,4971.426,106.001C4973.110,105.977,4974.703,106.762,4975.709,108.113L4975.709,106.271L4980.420,106.271L4980.420,120.829C4980.418,125.169,4977.134,127.966,4972.852,127.966ZZM4975.564,113.408C4975.564,111.495,4974.337,110.210,4972.653,110.210C4970.940,110.210,4969.712,111.495,4969.712,113.408C4969.712,115.321,4970.940,116.604,4972.653,116.604C4974.337,116.604,4975.564,115.319,4975.564,113.408ZZ">
+                        </path>
+                      </g>
+                    </g>
+                    <g id="shape-07bfee33-9922-11ed-86ae-6b73ddd7d7b4">
+                      <g class="fills" id="fills-07bfee33-9922-11ed-86ae-6b73ddd7d7b4">
+                        <path class="cls-1" rx="0" ry="0" style="fill:#f5f1e4;fill-opacity:1" d="M4992.078,118.303C4991.193,120.102,4989.538,120.843,4987.539,120.843C4985.284,120.843,4983.000,119.560,4983.000,116.762C4983.000,110.852,4991.849,113.508,4991.849,110.796C4991.849,109.854,4991.078,109.340,4989.966,109.340C4988.648,109.340,4987.989,110.025,4987.989,111.253L4983.425,111.253C4983.425,107.463,4986.765,106.000,4990.190,106.000C4993.587,106.000,4996.700,107.341,4996.700,110.882L4996.700,120.558L4992.078,120.558ZM4989.309,117.589C4990.791,117.589,4991.935,116.732,4991.935,115.078L4991.935,114.221C4990.309,115.078,4987.738,114.792,4987.738,116.304C4987.735,117.161,4988.454,117.589,4989.309,117.589ZZ">
+                        </path>
+                      </g>
+                    </g>
+                    <g id="shape-07bfee34-9922-11ed-86ae-6b73ddd7d7b4">
+                      <g class="fills" id="fills-07bfee34-9922-11ed-86ae-6b73ddd7d7b4">
+                        <path class="cls-1" rx="0" ry="0" style="fill:#f5f1e4;fill-opacity:1" d="M5003.854,120.558L4999.000,120.558L4999.000,106.285L5003.710,106.285L5003.710,108.198C5004.510,106.771,5005.966,106.000,5007.679,106.000C5009.648,106.000,5011.247,106.857,5012.046,108.597C5012.817,106.949,5014.444,106.000,5016.385,106.000C5019.211,106.000,5021.267,107.770,5021.267,111.309L5021.267,120.558L5016.418,120.558L5016.418,112.485C5016.418,110.715,5015.733,109.859,5014.505,109.859C5013.250,109.859,5012.565,110.715,5012.565,112.485L5012.565,120.558L5007.708,120.558L5007.708,112.485C5007.708,110.715,5007.022,109.859,5005.795,109.859C5004.539,109.859,5003.854,110.715,5003.854,112.485Z">
+                        </path>
+                      </g>
+                    </g>
+                    <g id="shape-07bfee35-9922-11ed-86ae-6b73ddd7d7b4">
+                      <g class="fills" id="fills-07bfee35-9922-11ed-86ae-6b73ddd7d7b4">
+                        <path class="cls-1" rx="0" ry="0" style="fill:#f5f1e4;fill-opacity:1" d="M5023.000,101.626C5023.000,100.143,5024.170,99.000,5025.770,99.000C5027.396,99.000,5028.570,100.142,5028.570,101.626C5028.570,103.111,5027.399,104.281,5025.770,104.281C5024.170,104.281,5023.000,103.111,5023.000,101.626ZZM5023.343,120.666L5023.343,106.393L5028.195,106.393L5028.195,120.666Z">
+                        </path>
+                      </g>
+                    </g>
+                    <g id="shape-07bfee36-9922-11ed-86ae-6b73ddd7d7b4">
+                      <g class="fills" id="fills-07bfee36-9922-11ed-86ae-6b73ddd7d7b4">
+                        <path class="cls-1" rx="0" ry="0" style="fill:#f5f1e4;fill-opacity:1" d="M5036.709,120.843C5032.920,120.843,5030.000,119.018,5030.000,115.848L5034.425,115.848C5034.425,117.105,5035.396,117.732,5036.651,117.732C5037.765,117.732,5038.421,117.304,5038.421,116.505C5038.421,113.964,5030.257,116.419,5030.257,110.481C5030.257,107.656,5032.883,106.000,5036.281,106.000C5039.963,106.000,5042.706,108.112,5042.706,110.824L5038.279,110.824C5038.279,109.854,5037.478,109.140,5036.366,109.140C5035.366,109.140,5034.719,109.539,5034.719,110.252C5034.719,112.538,5042.968,110.282,5042.968,116.220C5042.960,119.159,5040.306,120.843,5036.709,120.843ZZ">
+                        </path>
+                      </g>
+                    </g>
+                  </g>
+                </g>
+              </g>
+            </g>
+          </svg>
+
+          <h2 class="menu_title">MENU</h2>
         </header>
+
       <nav class="sidebar-nav">
-   
         <ul>
-          <li>
-            <a href="#"><i></i> <span>Projects</span></a>
-            
+          <li >
+            <a href="#" >
+              <span  >Projects</span>
+
+              <svg class="small_arrow_buttons" xmlns:xlink="http://www.w3.org/1999/xlink" fill="none" width="7.03" xmlns="http://www.w3.org/2000/svg" style="-webkit-print-color-adjust:exact" id="screenshot-07bfee2c-9922-11ed-86ae-6b73ddd7d7b4" version="1.1" viewBox="5103.985 214.985 7.03 11.03" height="11.03">
+                <g id="shape-07bfee2c-9922-11ed-86ae-6b73ddd7d7b4">
+                  <g class="fills" id="fills-07bfee2c-9922-11ed-86ae-6b73ddd7d7b4">
+                    <path rx="0" ry="0" style="fill:#f5f1e4;fill-opacity:1" d="M5104.801,215.000C5104.801,215.000,5110.354,218.208,5111.000,220.500C5110.354,223.250,5104.801,226.000,5104.801,226.000L5104.000,224.212C5104.000,224.212,5108.288,222.333,5108.934,220.500C5108.288,218.667,5104.000,216.787,5104.000,216.787Z">
+                    </path>
+                  </g>
+                  <g id="strokes-07bfee2c-9922-11ed-86ae-6b73ddd7d7b4" class="strokes">
+                    <g class="stroke-shape">
+                      <path rx="0" ry="0" style="fill:none;fill-opacity:none;stroke-width:0.0295481" d="M5104.801,215.000C5104.801,215.000,5110.354,218.208,5111.000,220.500C5110.354,223.250,5104.801,226.000,5104.801,226.000L5104.000,224.212C5104.000,224.212,5108.288,222.333,5108.934,220.500C5108.288,218.667,5104.000,216.787,5104.000,216.787Z">
+                      </path>
+                    </g>
+                  </g>
+                </g>
+              </svg>
+
+            </a>
           </li>
           <li>
-            <a href="#"><i class="hover"></i> <span class="hover">Collaborators</span></a>
-            <!-- <ul class="nav-flyout">
-              <li>
-                <a href="#"><i class="ion-ios-alarm-outline"></i>Watch</a>
-              </li>
-              <li>
-                <a href="#"><i class="ion-ios-camera-outline"></i>Creeper</a>
-              </li>
-              <li>
-                <a href="#"><i class="ion-ios-chatboxes-outline"></i>Hate</a>
-              </li>
-              <li>
-                <a href="#"><i class="ion-ios-cog-outline"></i>Grinder</a>
-              </li>
-            </ul> -->
+            <a href="#">
+              <span class="hover">Collaborators</span>
+
+              <svg class="small_arrow_buttons" xmlns:xlink="http://www.w3.org/1999/xlink" fill="none" width="7.03" xmlns="http://www.w3.org/2000/svg" style="-webkit-print-color-adjust:exact" id="screenshot-07bfee2c-9922-11ed-86ae-6b73ddd7d7b4" version="1.1" viewBox="5103.985 214.985 7.03 11.03" height="11.03">
+                <g id="shape-07bfee2c-9922-11ed-86ae-6b73ddd7d7b4">
+                  <g class="fills" id="fills-07bfee2c-9922-11ed-86ae-6b73ddd7d7b4">
+                    <path rx="0" ry="0" style="fill:#f5f1e4;fill-opacity:1" d="M5104.801,215.000C5104.801,215.000,5110.354,218.208,5111.000,220.500C5110.354,223.250,5104.801,226.000,5104.801,226.000L5104.000,224.212C5104.000,224.212,5108.288,222.333,5108.934,220.500C5108.288,218.667,5104.000,216.787,5104.000,216.787Z">
+                    </path>
+                  </g>
+                  <g id="strokes-07bfee2c-9922-11ed-86ae-6b73ddd7d7b4" class="strokes">
+                    <g class="stroke-shape">
+                      <path rx="0" ry="0" style="fill:none;fill-opacity:none;stroke-width:0.0295481" d="M5104.801,215.000C5104.801,215.000,5110.354,218.208,5111.000,220.500C5110.354,223.250,5104.801,226.000,5104.801,226.000L5104.000,224.212C5104.000,224.212,5108.288,222.333,5108.934,220.500C5108.288,218.667,5104.000,216.787,5104.000,216.787Z">
+                      </path>
+                    </g>
+                  </g>
+                </g>
+              </svg>
+
+            </a>
           </li>
         </ul>
       </nav>
     </aside>
 
-    <ul class="nav-flyout">
-      <h2>Projects</h2>
-      <li>
-        <p>Recent projects</p>
-      </li>
-      <li>
-      </li>
-      <li>
-      </li>
-      <li>
-      </li>
-    </ul>
+    <div class="nav-flyout" id="nav-flyout">
+      <h2 class="projects_title">Projects</h2>
+      <ul>
+        <li>
+          <p>Recent projects</p>
+        </li>
+        <li>
+          <p>Projects</p>
+        </li>
+      </ul>
+    </div>
 
-  </section>
+</section>
