sidebar fonctionnel avec sidebar secondaire affichable et rétractable

--- a/apps/workspace-ui/src/app/components/SideBar/side-bar.component.sass
+++ b/apps/workspace-ui/src/app/components/SideBar/side-bar.component.sass
@@ -97,7 +97,7 @@ h3,h2,h1,p
         vertical-align: middle
 
 .nav-flyout
-  display: block
+  display: none  
   position: absolute
   background-color: #313131
   z-index: 10
@@ -148,5 +148,5 @@ h3,h2,h1,p
 
 // truc
 
-#hover_sidebar:hover + .nav-flyout
-      display: block
+// #hover_sidebar:hover + .nav-flyout
+//       display: block
