--- a/apps/workspace-ui/src/app/components/SideBar/side-bar.component.html
+++ b/apps/workspace-ui/src/app/components/SideBar/side-bar.component.html
@@ -1,6 +1,6 @@
 <section class="app">
 
-    <aside class="sidebar" >
+    <aside class="sidebar">
         <header>
 
           <svg xmlns:xlink="http://www.w3.org/1999/xlink" fill="none" width="125.968" xmlns="http://www.w3.org/2000/svg" style="-webkit-print-color-adjust:exact" id="screenshot-07bfee25-9922-11ed-86ae-6b73ddd7d7b4" version="1.1" viewBox="4917 98 125.968 31.294" height="31.294">
@@ -61,9 +61,9 @@
 
       <nav class="sidebar-nav">
         <ul>
-          <li >
-            <a href="#" >
-              <span  >Projects</span>
+          <li>
+            <a href="#" onclick="sidebarProjects()">
+              <span>Projects</span>
 
               <svg class="small_arrow_buttons" xmlns:xlink="http://www.w3.org/1999/xlink" fill="none" width="7.03" xmlns="http://www.w3.org/2000/svg" style="-webkit-print-color-adjust:exact" id="screenshot-07bfee2c-9922-11ed-86ae-6b73ddd7d7b4" version="1.1" viewBox="5103.985 214.985 7.03 11.03" height="11.03">
                 <g id="shape-07bfee2c-9922-11ed-86ae-6b73ddd7d7b4">
@@ -83,7 +83,7 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" onclick="sidebarCollab()">
               <span class="hover">Collaborators</span>
 
               <svg class="small_arrow_buttons" xmlns:xlink="http://www.w3.org/1999/xlink" fill="none" width="7.03" xmlns="http://www.w3.org/2000/svg" style="-webkit-print-color-adjust:exact" id="screenshot-07bfee2c-9922-11ed-86ae-6b73ddd7d7b4" version="1.1" viewBox="5103.985 214.985 7.03 11.03" height="11.03">
@@ -107,7 +107,7 @@
       </nav>
     </aside>
 
-    <div class="nav-flyout" id="nav-flyout">
+    <div class="nav-flyout" id="projects">
       <h2 class="projects_title">Projects</h2>
       <ul>
         <li>
@@ -115,6 +115,21 @@
         </li>
         <li>
           <p>Projects</p>
+        </li>
+      </ul>
+    </div>
+
+    <div class="nav-flyout" id="collab">
+      <h2 class="projects_title">Collaborators</h2>
+      <ul>
+        <li>
+          <p>Recent interactions</p>
+        </li>
+        <li>
+          <p>Users</p>
+        </li>
+        <li>
+          <p>Groups</p>
         </li>
       </ul>
     </div>
