--- a/apps/workspace-ui/src/app/components/nav-bar/nav-bar.component.sass
+++ b/apps/workspace-ui/src/app/components/nav-bar/nav-bar.component.sass
@@ -1,18 +1,18 @@
-// Estimated color variables based on the zoomed-in maquette
-$color-navbar-background: #1e1e1e // Black for navbar background
-$color-navbar-text: #fff // White for text on navbar
-$color-primary: #ffd03b // Gold color for accents and active elements
-$color-inactive-tab: #eae5d6 // Light grey for inactive tabs
-$color-active-tab: #f5f1e4 // Brighter grey for active tabs
-$color-tab-text: #333 // Dark grey for text in tabs
-$color-background: #f5f1e4 // Off-white/beige for the background
+// Variables de couleur
+$color-navbar-background: #1e1e1e // Noir pour le fond de la navbar
+$color-navbar-text: #fff // Blanc pour le texte de la navbar
+$color-primary: #ffd03b // Or pour les accents et les éléments actifs
+$color-inactive-tab: #eae5d6 // Gris clair pour les onglets inactifs
+$color-active-tab: #f5f1e4 // Gris plus clair pour les onglets actifs
+$color-tab-text: #333 // Gris foncé pour le texte des onglets
+$color-background: #f5f1e4 // Beige/off-$color-navbar-text pour le fond
+$color-grey-light: #444 // Gris clair pour les bordures
 
 .custom-navbar 
   display: flex
   justify-content: space-between
   align-items: center
   background-color: $color-navbar-background
-  // padding: 10px
 
   .navbar-left 
     display: flex
@@ -31,29 +31,42 @@ $color-background: #f5f1e4 // Off-white/beige for the background
   
 
   .navbar-search 
-    input[type="search"] 
-      padding: 8px 50px
-      border: none
-      border-radius: 10px
-      background-color: $color-background
-      color: Black
+    .search-container 
+      display: flex
+      align-items: center
+      position: relative
+
+      .imageSearch 
+        position: absolute
+        left: 10px
+        height: 20px
+        width: 20px
+      
+
+      input[type="search"] 
+        padding: 8px 30px
+        border: none
+        border-radius: 10px
+        background-color: $color-background
+        color: $color-navbar-text
+        width: 100%
+      
     
   
 
   .navbar-right 
     display: flex
+    align-items: center
 
     .nav-item 
-      margin-left: 20px
-
+      margin-left: 10px
+      
       a 
         display: flex
         align-items: center
         text-decoration: none
         color: $color-navbar-text
 
-        i 
-          margin-right: 5px
         
 
         label 
@@ -73,7 +86,6 @@ $color-background: #f5f1e4 // Off-white/beige for the background
     background-color: $color-inactive-tab
     border: none
     padding: 10px 20px
-    margin-right: 5px // Spacing between tabs
     cursor: pointer
     font-weight: bold
     color: $color-tab-text
@@ -86,27 +98,95 @@ $color-background: #f5f1e4 // Off-white/beige for the background
 
 
 .tab-content 
-  padding: 20px
+  
   background-color: $color-background
 
-
-.dropdown 
+// Styles du menu déroulant de la nav-bar
+.nav-item 
   position: relative
-  /* Autres styles nécessaires */
+  display: flex
+  align-items: center
+  margin-right: 0
+  
 
-.dropdown-menu 
-  display: none
-  position: absolute
-  z-index: 1000
-  top: 100% // ou la hauteur appropriée pour aligner avec le bas du bouton déclencheur
-  right: 0 // cela alignera le bord droit du menu déroulant avec le bord droit du bouton déclencheur
-  background: white
-  border: 1px solid black
-  // Assurez-vous que le menu ne dépasse pas la largeur de la vue
-  max-width: calc(100vw - 100%) // 100vw est la largeur de la fenêtre, et 100% est la largeur du conteneur parent.
+  .dropdown-toggle 
+    display: flex
+    align-items: center
+    justify-content: flex-end
+    width: 100%
+  
 
-.dropdown-menu.show 
+  .user-details 
+    display: flex
+    align-items: center
+    svg 
+      width: 100px
+      height: 30px
+
+   
+
+  .dropdown-menu 
+    display: none
+    position: fixed
+    right: 0
+    top: 100%
+    left:0
+    z-index: 1000
+    background-color: $color-navbar-background
+    color: $color-navbar-text
+    border: 1px solid $color-grey-light
+    box-sizing: border-box
+    max-width: 100%
+    overflow: hidden
+    text-overflow: ellipsis
+    width: auto
+
+    .user-info 
+      padding: 10px
+      background-color: $color-navbar-background
+      border-bottom: 1px solid $color-grey-light
+
+      span 
+        display: block
+      
+    .user-email 
+      white-space: nowrap // Empêche le retour à la ligne
+      overflow: hidden // Cache le contenu débordant
+      text-overflow: ellipsis // Affiche des points de suspension si le texte déborde
+      max-width: 100% // Limite la largeur du texte à celle du conteneur
+      display: block // Assurez-vous que l'élément prend toute la largeur disponible
+      font-size: 1vw // Ajuste dynamiquement en fonction de la largeur de la vue
+      min-font-size: 12px // Taille minimale pour la lisibilité
+    
+
+    .menu-items 
+      list-style: none
+      margin: 0
+      padding: 0
+
+      li 
+        button 
+          display: block
+          width: 100%
+          background-color: $color-navbar-background
+          color: $color-navbar-text
+          text-align: left
+          padding: 10px
+          border: none
+          cursor: pointer
+
+          &:hover 
+            background-color: $color-grey-light
+          
+        
+      
+    
+  
+
+
+.showUserMenu .dropdown-menu 
   display: block
+
 
 .navbar-search 
   .search-container 
@@ -116,17 +196,18 @@ $color-background: #f5f1e4 // Off-white/beige for the background
 
     .imageSearch 
       position: absolute
-      left: 10px 
-      height: 20px 
+      left: 10px
+      height: 20px
       width: 20px
     
 
     input[type="search"] 
-      padding-left: 30px 
-
+      padding-left: 30px
+    
   
 
-/* svg-path */
+
+// Conservation des styles existants pour les éléments SVG
 .svg-path 
   position: absolute
   width: 27px
@@ -135,15 +216,16 @@ $color-background: #f5f1e4 // Off-white/beige for the background
   top: 10.56px
   background-color: rgba(245, 241, 228, 1)
 
-  /* Notif button */
-.notif-button
+
+.notif-button 
   position: absolute
   width: 31.96px
   height: 34.93px
   left: 1713px
   top: 8px
+  margin-right: 5px
 
- 
+
 .svg-path-29 
   position: absolute
   width: 24px
@@ -152,8 +234,35 @@ $color-background: #f5f1e4 // Off-white/beige for the background
   top: 15px
   background-color: rgba(245, 241, 228, 1)
 
+
 .custom-tabs 
   display: flex
   justify-content: flex-start
-  background-color: $color-primary // Votre couleur de fond jaune
-  min-height: 50px // Hauteur minimum pour s'assurer que le conteneur est visible
+  background-color: $color-primary
+  min-height: 50px
+
+.pseudo
+  color: #fff
+
+
+.profile-layout 
+  display: flex
+  align-items: stretch // Assure que les enfants s'étendent sur toute la hauteur
+
+.sidebar 
+  // Styles pour l'aside
+  width: 200px // Ajustez la largeur selon vos besoins
+  // Plus de styles si nécessaire
+  
+
+app-profile-tab 
+  flex-grow: 1 // Permet à ProfileTabComponent de remplir l'espace restant
+  // Plus de styles si nécessaire
+  
+
+.avatar-icon-nav 
+  width: 50px 
+  height: 50px 
+  object-fit: cover 
+  border-radius: 50% 
+  margin-right: 10px 
